--- a/cpp/lec/1/index.html
+++ b/cpp/lec/1/index.html
@@ -1,8 +1,8 @@
-<!-- <link rel='stylesheet' href='normalize.css'/> -->
-<link rel='stylesheet' href='markdown.css'/>
+<link rel='stylesheet' href='../../pagescss/normalize.css'/> 
+<link rel='stylesheet' href='../../pagescss/markdown.css'/>
 
-<link rel='stylesheet' href='syntax.css'/>
-<link rel='stylesheet' href='term.css'/>
+<link rel='stylesheet' href='../../pagescss/syntax.css'/>
+<link rel='stylesheet' href='../../pagescss/term.css'/>
 <p><title>C++ intro</title></p>
 
 <h1>C++ intro. Variables. Types. Arithmetic operations.</h1>
