--- a/cpp/hw/1/index.html
+++ b/cpp/hw/1/index.html
@@ -21,6 +21,11 @@
 </code></pre>
 
 
+<p>If a program does not do what it&rsquo;s supposed to do (e.g. there are some bugs,
+it behaves differently, or maybe even does not compile), then
+its &ldquo;incomplete&rdquo; status must be clearly mentioned in the comment to the program.
+In this case, please briefly describe what is implemented, and what is not.</p>
+
 <h3>Task 1. Printing a rectangle</h3>
 
 <p>Write a program that asks the user to input two positive integers,
