--- a/cpp/lec/7/index.html
+++ b/cpp/lec/7/index.html
@@ -150,13 +150,13 @@ cannot be detected at compile time.</p>
 ==26298== Command: ./prog
 ==26298== 
 ==26298== Use of uninitialised value of size 8
-                &lt; ... snip 5 lines ... &gt;
+                &lt; ... 5 more lines ... &gt;
 ==26298== 
 ==26298== Conditional jump or move depends on uninitialised value(s)
-                &lt; ... snip 5 lines ... &gt;
+                &lt; ... 5 more lines ... &gt;
 ==26298== 
 ==26298== Conditional jump or move depends on uninitialised value(s)
-                &lt; ... snip 4 lines ... &gt;
+                &lt; ... 4 more lines ... &gt;
 ==26298== 
 0
 ==26298== 
