--- a/cpp/lec/8/index.html
+++ b/cpp/lec/8/index.html
@@ -40,8 +40,8 @@
 
   <span class="kt">char</span> <span class="n">c1</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="sc">'A'</span><span class="p">,</span> <span class="sc">'T'</span><span class="p">,</span> <span class="sc">'G'</span><span class="p">,</span> <span class="sc">'C'</span><span class="p">,</span> <span class="sc">'T'</span><span class="p">};</span>
   
-  <span class="kt">char</span> <span class="n">c2</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="sc">'Z'</span><span class="p">};</span> <span class="c1">// all 5 elements are set
-</span>                      <span class="c1">// equal to 'Z'
+  <span class="kt">char</span> <span class="n">c2</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span><span class="sc">'Z'</span><span class="p">};</span> <span class="c1">// the first element is set equal 
+</span>                      <span class="c1">// to 'Z', and the other four to '\0'
 </span>
   <span class="kt">char</span> <span class="n">c3</span><span class="p">[]</span>  <span class="o">=</span> <span class="p">{</span><span class="sc">'@'</span><span class="p">,</span> <span class="sc">'#'</span><span class="p">,</span> <span class="sc">'$'</span><span class="p">,</span> <span class="sc">'%'</span><span class="p">,</span> <span class="sc">'^'</span><span class="p">,</span> <span class="sc">'&amp;'</span><span class="p">,</span> <span class="sc">'*'</span><span class="p">};</span>
   <span class="c1">// here, the size of the declared array is 7, and 
@@ -109,7 +109,6 @@ random values in the interval 0 &lt;= x &lt;= 999.</p>
   <span class="p">}</span>
   <span class="c1">// otherwise, if 123 was not found:
 </span>  <span class="k">return</span> <span class="nb">false</span><span class="p">;</span>
-
 <span class="p">}</span>
 </code></pre>
 
