--- a/cpp/hw/4/index.html
+++ b/cpp/hw/4/index.html
@@ -72,6 +72,8 @@ spends at least 75% of their time at this place.</p>
 
 <p><strong>Tracking data</strong></p>
 
+<p>All information from the employee tracking devices is listed here</p>
+
 <pre><code># Number of entries
 53
 # Timestamp EmplyeeID Location
@@ -88,10 +90,12 @@ spends at least 75% of their time at this place.</p>
   ...
 </code></pre>
 
-<p>(Observe that due not infrequent tracking device failures, the locations of some employees are not
-reported at some timestamps, assume that their location is unknown at that time interval)</p>
+<p>(Observe that due to infrequent tracking device failures, the locations of some employees are not
+reported at some timestamps, assume that their location is unknown at those time intervals)</p>
 
 <p><strong>Smoke detectors data</strong></p>
+
+<p>This datafile lists all locations where smoke was detected</p>
 
 <pre><code># Number of entries
 7
