--- a/cpp/hw/4/index.html
+++ b/cpp/hw/4/index.html
@@ -76,17 +76,17 @@ spends at least 75% of their time at this place.</p>
 
 <pre><code># Number of entries
 53
-# Timestamp EmplyeeID Location
-  105       11        1
-  105       24        6
-  105       37        17
-  105       19        8
-  106       37        17
-  106       24        5
-  106       19        8
-  106       11        2
-  106       83        20
-  107       37        17
+# Timestamp EmployeeID Location
+  105       11         1
+  105       24         6
+  105       37         17
+  105       19         8
+  106       37         17
+  106       24         5
+  106       19         8
+  106       11         2
+  106       83         20
+  107       37         17
   ...
 </code></pre>
 
