--- a/cpp/lec/17/index.html
+++ b/cpp/lec/17/index.html
@@ -22,6 +22,7 @@
 <li><code>vector&lt;T&gt; v(n);</code> makes a vector of size <code>n</code>. All elements are initialized using the default
 constructor for the type <code>T</code>. If there is no such a constructor (for example for the primitive
 types wlike <code>int</code>, <code>double</code>, or <code>bool</code>), they are not initialized at all and contain garbage.</li>
+<li><code>vector&lt;T&gt; v(n, value);</code> makes a vector of size <code>n</code> with all elements equal to <code>value</code>.</li>
 </ul>
 
 
