--- a/cpp/lab/10/index.html
+++ b/cpp/lab/10/index.html
@@ -55,7 +55,7 @@ the value <code>value</code>.</li>
 </ul>
 
 
-<h2>Assignments</h2>
+<h2>Programming assignments</h2>
 
 <h3>Task 1. One-dimensional <code>vector&lt;int&gt;</code>.</h3>
 
