--- a/cpp/lab/10/index.html
+++ b/cpp/lab/10/index.html
@@ -36,8 +36,8 @@ In this case, also briefly describe what is implemented, and what is not.</p>
 <ul>
 <li><code>vector&lt;T&gt; v;</code> default constructor, makes an empty vector.</li>
 <li><code>vector&lt;T&gt; v(n);</code> makes a vector of size <code>n</code>. All elements are initialized using the default
-constructor for the type <code>T</code>. If there is no such a constructor (for example for the primitive
-types like <code>int</code>, <code>double</code>, or <code>bool</code>), they are not initialized at all and contain garbage.</li>
+constructor for the type <code>T</code>. The primitive types (for example <code>int</code>, <code>double</code>, or <code>bool</code>),
+don&rsquo;t have a constructor and they are initialized with <code>0</code>.</li>
 <li><code>vector&lt;T&gt; v(n, value);</code> makes a vector of size <code>n</code> with all elements equal to <code>value</code>.</li>
 </ul>
 
