--- a/cpp/hw/4/index.html
+++ b/cpp/hw/4/index.html
@@ -44,7 +44,7 @@ isn&rsquo;t it exciting?!</p>
 
 <p>The new software should be run from the terminal with 3 command line arguments:</p>
 
-<pre><code>  ./hr employees.dat tracking.dat smoke.dat
+<pre><code>  ./program employees.dat tracking.dat smoke.dat
 </code></pre>
 
 <p>If the number of command line arguments is less than 3, the program should exit immediately
