--- a/cpp/hw/4/index.html
+++ b/cpp/hw/4/index.html
@@ -119,7 +119,17 @@ you have to run the compiler with an additional comamnd line option <code>-std=c
 <pre><code>g++ -std=c++11 -o program program.cpp
 </code></pre>
 
-<p style="text-align:center;"> >>> <strong>Example datafiles to be added</strong> &lt;&lt;&lt;</p>
+<h3>Example data files</h3>
+
+<p style="text-align:center;"> >>>
+[<a href="employee.dat">employee.dat</a>]
+[<a href="tracking.dat">tracking.dat</a>]
+[<a href="smoke.dat">smoke.dat</a>]
+&lt;&lt;&lt;</p>
+
+<p>Your code should be general, and should work for any dataset that complies with the file formats.</p>
+
+<p>You only may assume that the &ldquo;tracking&rdquo; and &ldquo;smoke&rdquo; data are given sorted in the order of increasing <em>Timestamp</em>.</p>
 
 <h3>User Interface</h3>
 
