--- a/cpp/lab/11/index.html
+++ b/cpp/lab/11/index.html
@@ -161,7 +161,7 @@ Refresh this file in the browser (with F5, or Ctrl+R, or Cmd+R) to see how the c
  <code>###### Header 6</code></p>
 
 <p> They should be replaced with the corresponding header tags <br/>
- <code>&lt;h1&gt; Header &lt;/h1&gt;</code>,<br/>
+ <code>&lt;h1&gt; Header 1 &lt;/h1&gt;</code>,<br/>
   etc.</p>
 
 <ul>
