--- a/cpp/hw/4/index.html
+++ b/cpp/hw/4/index.html
@@ -153,9 +153,11 @@ Report those employees who spend at least 25% of the time not at their office.</
 
 <p>After that the program should return to the main menu.</p></li>
 <li><p><strong>Reporting suspected smokers.</strong>
-The program should print the list of all people who spent at least 2% of the time in the rooms where smoke was detected.</p>
+The program should print the list of all people who spent at least <strong>1%</strong> of the time in the rooms where smoke was detected.</p>
 
-<p>Then the program should return to the main menu.</p></li>
+<p>Then the program should return to the main menu.</p>
+
+<p><em>[Note the correction for finding smokers: use 1% instead of 2%]</em></p></li>
 <li><p><strong>Reporting employee&rsquo;s friends</strong>.
 The program should ask for the first name and the last name of an employee.
 Then report an error message if the employee is not found, otherwise the program should print out
