--- a/counting/index.html
+++ b/counting/index.html
@@ -47,7 +47,8 @@ function ctrlEnter(event, formElem)
   <div id="output"></div>
   <textarea id="formula" rows="2" cols="40" onkeydown="ctrlEnter(event,this);">x = reusable 5</textarea> 
   <br />
-  <button id="EnterButton" onclick="process_input()">Ctrl+Enter</button>
+  <button id="EnterButton" onclick="process_input()">Ctrl+Enter</button> 
+  <a href="http://www.cs.hunter.cuny.edu/~saad/count/">Docs</a>
 </body>
 
 </html>
