--- a/cs136/linux/index.html
+++ b/cs136/linux/index.html
@@ -6,7 +6,7 @@
 <h2>The Unix commands you need to know</h2>
 
 <p>You need to know just a few commands to work comfortably in a Unix terminal:
-<strong><code>ls</code></strong>, <strong><code>cd</code></strong>, <strong><code>less</code></strong>, <strong><code>mkdir</code></strong>, <strong><code>cp</code></strong>, <strong><code>mv</code></strong>, <strong><code>rm</code></strong>.</p>
+<strong><code>ls</code></strong>, <strong><code>cd</code></strong>, <strong><code>pwd</code></strong>, <strong><code>less</code></strong>, <strong><code>mkdir</code></strong>, <strong><code>cp</code></strong>, <strong><code>mv</code></strong>, <strong><code>rm</code></strong>.</p>
 
 <p>A brief summary:</p>
 
