--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -38,7 +38,7 @@ let&rsquo;s try to write some of the most important functions.</p>
 </code></pre>
 
 
-<h3>-> <strong><a href="mystring.cpp">Download (incomplete) program mystring.cpp</a></strong> &lt;-</h3>
+<p style="text-align:center;"> <strong><span style="font-size:1.4em">Download an (incomplete) program &ldquo;<a href="mystring.cpp">mystring.cpp</a>&rdquo;</span></strong></p>
 
 <h3>A proposed interface of the class <code>MyString</code>:</h3>
 
@@ -51,7 +51,7 @@ let&rsquo;s try to write some of the most important functions.</p>
   <span class="c1">// Stream input and output operators
 </span>  <span class="k">friend</span> <span class="n">ostream</span> <span class="o">&amp;</span> <span class="k">operator</span><span class="o">&lt;&lt;</span> <span class="p">(</span><span class="n">ostream</span> <span class="o">&amp;</span><span class="n">os</span><span class="p">,</span> <span class="n">MyString</span> <span class="n">t</span><span class="p">);</span>
   <span class="k">friend</span> <span class="n">istream</span> <span class="o">&amp;</span> <span class="k">operator</span><span class="o">&gt;&gt;</span> <span class="p">(</span><span class="n">istream</span> <span class="o">&amp;</span><span class="n">is</span><span class="p">,</span> <span class="n">MyString</span> <span class="o">&amp;</span><span class="n">t</span><span class="p">);</span>
-<span class="p">}</span>
+<span class="p">};</span>
 </code></pre>
 
 
@@ -73,7 +73,7 @@ However, if you wish, you may add more constructors to the class, for example:</
   <span class="n">MyString</span><span class="p">();</span> <span class="c1">// The default constructor
 </span>  <span class="n">MyString</span><span class="p">(</span><span class="n">string</span> <span class="n">s</span><span class="p">);</span> <span class="c1">// A constructor creating MyString from a string
 </span>  <span class="p">...</span>
-<span class="p">}</span>
+<span class="p">};</span>
 </code></pre>
 
 
@@ -99,7 +99,9 @@ created automatically by the compiler.</p>
 
 <p>You can choose a different internal representation if you wish.</p>
 
-<h3>-> <strong><a href="mystring.cpp">Download (incomplete) program mystring.cpp</a></strong> &lt;-</h3>
+<p style="text-align:center;"> <strong><span style="font-size:1.4em">Download an (incomplete) program &ldquo;<a href="mystring.cpp">mystring.cpp</a>&rdquo;</span></strong></p>
+
+<p style="text-align:center;"> <strong><span>Download an example input file &ldquo;<a href="file.txt">file.txt</a>&rdquo;</span></strong></p>
 
 <h3>Where to start implementing the class?</h3>
 
