--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -38,7 +38,9 @@ let&rsquo;s try to write some of the most important functions.</p>
 </code></pre>
 
 
-<p style="text-align:center;"> <strong><span style="font-size:1.4em">Download an (incomplete) program &ldquo;<a href="mystring.cpp">mystring.cpp</a>&rdquo;</span></strong></p>
+<p style="text-align:center;"> <strong><span style="background-color:#aaeeff">Download an (incomplete) implementation > <a href="mystring.cpp">mystring.cpp</a> &lt; </span></strong></p>
+
+<p style="text-align:center;"> <strong><span>Download an example input file > <a href="file.txt">file.txt</a> &lt; </span></strong></p>
 
 <h3>A proposed interface of the class <code>MyString</code>:</h3>
 
@@ -99,9 +101,9 @@ created automatically by the compiler.</p>
 
 <p>You can choose a different internal representation if you wish.</p>
 
-<p style="text-align:center;"> <strong><span style="font-size:1.4em">Download an (incomplete) program &ldquo;<a href="mystring.cpp">mystring.cpp</a>&rdquo;</span></strong></p>
+<p style="text-align:center;"> <strong><span style="background-color:#aaeeff">Download an (incomplete) implementation > <a href="mystring.cpp">mystring.cpp</a> &lt; </span></strong></p>
 
-<p style="text-align:center;"> <strong><span>Download an example input file &ldquo;<a href="file.txt">file.txt</a>&rdquo;</span></strong></p>
+<p style="text-align:center;"> <strong><span>Download an example input file > <a href="file.txt">file.txt</a> &lt; </span></strong></p>
 
 <h3>Where to start implementing the class?</h3>
 
