--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -29,7 +29,7 @@ let&rsquo;s try to write some of the most important functions.</p>
 </span>
   <span class="c1">// We would also want to read words from a text file,
 </span>  <span class="c1">// the same way the type `string` would do that:
-</span>  <span class="n">fstream</span> <span class="n">fin</span><span class="p">(</span><span class="s">"file.txt"</span><span class="p">);</span>
+</span>  <span class="n">ifstream</span> <span class="n">fin</span><span class="p">(</span><span class="s">"file.txt"</span><span class="p">);</span>
   <span class="k">while</span><span class="p">(</span><span class="n">fin</span> <span class="o">&gt;&gt;</span> <span class="n">s</span><span class="p">)</span> <span class="p">{</span>
     <span class="n">cout</span> <span class="o">&lt;&lt;</span> <span class="n">s</span> <span class="o">&lt;&lt;</span> <span class="n">endl</span><span class="p">;</span>
   <span class="p">}</span>
