--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -160,7 +160,8 @@ After the input ends (end-of-file is reached), the program should compute and pr
 + 10 - 2
 </code></pre>
 
-<p>The corresponding outputs should be: <code>15</code>, <code>28</code>, <code>4</code>, and <code>1108</code>.</p>
+<p>(Each of the inputs above is a separate file containing one single formula.) <br/>
+The corresponding outputs should be: <code>15</code>, <code>28</code>, <code>4</code>, and <code>1108</code>.</p>
 
 <p>Notice that there are always <strong>spaces</strong> between <code>+</code>, <code>-</code>, and the numbers. So it is possible to read
 the operator and the following number using the familiar <code>cin &gt;&gt;</code> operations.
