--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -155,13 +155,19 @@ After the input ends (end-of-file is reached), the program should compute and pr
 <pre><code>5 + 6 - 7 - 8 + 9 + 10 - 11 
 </code></pre>
 
+<pre><code>  1 + 1 + 1 + 1
++ 1 + 1 + 1 + 1
++ 1 + 1 + 1 + 1
++ 1 + 1 + 1 + 1
+</code></pre>
+
 <pre><code>1000 
 + 100 
 + 10 - 2
 </code></pre>
 
 <p>(Each of the inputs above is a separate file containing one single formula.) <br/>
-The corresponding outputs should be: <code>15</code>, <code>28</code>, <code>4</code>, and <code>1108</code>.</p>
+The corresponding outputs should be: <code>15</code>, <code>28</code>, <code>4</code>, <code>16</code>, and <code>1108</code>.</p>
 
 <p>Notice that there are always <strong>spaces</strong> between <code>+</code>, <code>-</code>, and the numbers. So it is possible to read
 the operator and the following number using the familiar <code>cin &gt;&gt;</code> operations.
