--- a/cs136/ex/2/index.html
+++ b/cs136/ex/2/index.html
@@ -155,10 +155,10 @@ After the input ends (end-of-file is reached), the program should compute and pr
 <pre><code>5 + 6 - 7 - 8 + 9 + 10 - 11 
 </code></pre>
 
-<pre><code>  1 + 1 + 1 + 1
-+ 1 + 1 + 1 + 1
-+ 1 + 1 + 1 + 1
-+ 1 + 1 + 1 + 1
+<pre><code>1 + 1 + 1 + 1 + 
+1 + 1 + 1 + 1 + 
+1 + 1 + 1 + 1 + 
+1 + 1 + 1 + 1
 </code></pre>
 
 <pre><code>1000 
