--- a/cs136/ex/1/index.html
+++ b/cs136/ex/1/index.html
@@ -68,9 +68,9 @@ In particular, <code>37 % 10</code> would return <code>7</code>, since this is t
 <p><strong>The task:</strong></p>
 
 <p>Write a program <code>leap.cpp</code> that asks the user to input an integer representing a year number (1999, 2016, etc.).
-If the input year is a <em>leap year</em>, it should print <code>Leap year</code>, otherwise, print <code>Common year</code>.</p>
+If the input year is a <em>leap year</em> according to the modern Gregorian calendar, it should print <code>Leap year</code>, otherwise, print <code>Common year</code>.</p>
 
-<p>In the modern Gregorian calendar, a year is a <em>leap year</em> if it is divisible by 4, but century years are not leap years unless they are divisible by 400.</p>
+<p>In the <strong>modern Gregorian calendar</strong>, a year is a <em>leap year</em> if it is divisible by 4, but century years are not leap years unless they are divisible by 400.</p>
 
 <p>This means that 2010, 2016, 2020, and 2040 are all leap years.<br/>
 However, the century years 1800, 1900, 2100, 2200, 2300 and 2500 are NOT.<br/>
