--- a/cs136/ex/1/index.html
+++ b/cs136/ex/1/index.html
@@ -99,7 +99,8 @@ Common year
 <p style="text-align:center;"> <img src="http://i.imgur.com/LmnIW7m.jpg" alt="" /></p>
 
 <p>Write a program <code>possible.cpp</code> that asks the user to input a date: <strong>Month</strong>, <strong>Day</strong>, and <strong>Year</strong>,
-and tells the user whether the input date is <code>Possible</code> or <code>Impossible</code>.</p>
+and tells the user whether the input date is <code>Possible</code> or <code>Impossible</code>
+(according to the modern Gregorian calendar).</p>
 
 <p><strong>Example 1</strong></p>
 
